--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -20,6 +20,11 @@ div, span {
     font-family: "GaramondNo8",serif;
 }
 
+h1, h2 {
+    font-family: "GaramondNo8",serif;
+}
+
+
 p {
     @include stdFont;
 }
