--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -10,7 +10,7 @@ body > header {
   }
   h2 {
     margin: .2em 0 0;
-    @extend .sans;
+    @extend .serif;
     font-size: 1em;
     color: $subtitle-color;
     font-weight: normal;
