--- a/sass/partials/_footer.scss
+++ b/sass/partials/_footer.scss
@@ -1,5 +1,5 @@
 body > footer {
-  @extend .sans;
+  @extend .serif;
   font-size: .8em;
   color: $footer-color;
   text-shadow: lighten($footer-bg, 5) 0 1px;
