--- a/sass/partials/_navigation.scss
+++ b/sass/partials/_navigation.scss
@@ -54,7 +54,7 @@ body > nav {
     }
     a {
       @include link-colors($nav-color, $nav-color-hover, $visited: $nav-color);
-      font-family: $sans;
+      font-family: $serif;
       text-shadow: lighten($nav-bg, 12) 0 1px;
       float: left;
       text-decoration: none;
