--- a/source/_includes/custom/after_footer.html
+++ b/source/_includes/custom/after_footer.html
@@ -1,3 +1,4 @@
 {% comment %}
   Add content to be output at the bottom of each page. (You might use this for analytics scripts, for example)
 {% endcomment %}
+<a class="davidadlink" href="http://davidad.org" target="_blank"><div>a <span>davidad</span> production</div></a>
