--- a/sass/base/_solarized.scss
+++ b/sass/base/_solarized.scss
@@ -1,5 +1,5 @@
 $base03:          #222222 !default; //darkest blue
-$base02:          #073642 !default; //dark blue
+$base02:          #3f4345 !default; //dark blue
 $base01:          #586e75 !default; //darkest gray
 $base00:          #657b83 !default; //dark gray
 $base0:           #839496 !default; //medium gray
