--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -1,4 +1,4 @@
 <p>
-  Copyright &copy; {{ site.time | date: "%Y" }} - {{ site.author }} -
+Copyright &copy; {{ site.time | date: "%Y" }} - <a href="http://davidad.org">davidad</a> (David A. Dalrymple) -
   <span class="credit">Powered by <a href="http://octopress.org">Octopress</a></span>
 </p>
