--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -51,9 +51,9 @@ $header-subtitle-font-family: $heading-font-family !default;
 }
 
 @mixin stdFont {
-    font-size: 1.125em;
+    font-size: 1.08em;
     text-align: justify;
-    line-height: 1.5em;
+    line-height: 1.40em;
 }
 
 .heading {
@@ -112,7 +112,7 @@ h6, section h5, section section h4, section section section h3 {
   font-size: .8em;
 }
 
-p, article blockquote, ul, ol { margin-bottom: 1.5em; }
+p, article blockquote, ul, ol { margin-bottom: 1.23em; }
 
 ul { list-style-type: disc;
   ul { list-style-type: circle; margin-bottom: 0px;
@@ -134,6 +134,20 @@ sup { top: -.5em; }
 sub { bottom: -.5em; }
 
 a[rev='footnote']{ font-size: .75em; padding: 0 .3em; line-height: 1; }
+sup {
+    padding: 0;
+    margin: 0 0.02em 0 0.06em;
+}
+div.footnotes {
+    color: #414340;
+    p {
+        font-size: 0.9em;
+        margin-bottom: 0.85em;
+    }
+    ol {
+        margin-left: 1.33em;
+    }
+}
 
 q { font-style: italic;
   &:before { content: "\201C"; }
